# vdclab

./: CMakeLists.txt  common.props  leeme.txt  library.props  vdccommon.props  vdclab.sln
01glm/: 01glm.vcxproj  CMakeLists.txt  main.cpp  util.h
02pgupv/: 02pgupv.vcxproj  CMakeLists.txt  main.cpp
03mesh_model/: 03mesh_model.vcxproj  CMakeLists.txt  main.cpp
04gui/: 04gui.vcxproj  CMakeLists.txt  main.cpp
05grids/: 05grids.vcxproj  CMakeLists.txt  main.cpp
05vdc/: 05vdc.vcxproj  CMakeLists.txt  buildModel.cpp  buildModel.h  main.cpp
06mapacolor/: 06mapacolor.vcxproj  CMakeLists.txt  colormaps.cpp  main.cpp
07contornos/: 07contornos.vcxproj  CMakeLists.txt  contornos.cpp  contornos.h  main.cpp  vdcsuave.frag  vdcsuave.vert
08vectores/: 08vectores.vcxproj  CMakeLists.txt  colormap.h  constantshadingA.frag  constantshadingA.geom  constantshadingA.vert  gridTools.cpp  gridTools.h  main.cpp  vdcmapa.frag
PGUPV/: CMakeLists.txt  NO_MODIFICAR.txt  PGUPV.vcxproj  PGUPV.vcxproj.filters  animationChannel.cpp  animationClip.cpp  animationNode.cpp  animatorController.cpp  app.cpp  baseRenderer.cpp  bindableTexture.cpp  bindingPoint.cpp  bone.cpp  boundingVolumes.cpp  bufferObject.cpp  bufferRenderer.cpp  bufferTexture.cpp  button.cpp  camera.cpp  cameraHandler.cpp  checkBoxWidget.cpp  colorWheel.cpp  colorWidget.cpp  commandLineProcessor.cpp  commonDialogs.cpp  describeScenegraph.cpp  directionWidget.cpp  drawCommand.cpp  eventProcessor.cpp  eventSource.cpp  events.cpp  fbo.cpp  fileChooserWidget.cpp  fileStats.cpp  findNodeByName.cpp  floatSliderWidget.cpp  font.cpp  gamepad.cpp  geode.cpp  glMatrices.cpp  (+75 more)
PGUPV/include/: GUI3.h  HW.h  PGUPV.h  animationChannel.h  animationClip.h  animationNode.h  animatorController.h  app.h  baseRenderer.h  bindableTexture.h  bindingPoint.h  bone.h  boundingVolumes.h  bufferObject.h  bufferRenderer.h  bufferTexture.h  button.h  camera.h  camerahandler.h  checkBoxWidget.h  colorWheel.h  colorWidget.h  commandLineProcessor.h  common.h  commonDialogs.h  describeScenegraph.h  directionWidget.h  drawCommand.h  eventProcessor.h  eventSource.h  events.h  fbo.h  fileChooserWidget.h  fileFormats.h  fileStats.h  findNodeByName.h  floatSliderWidget.h  font.h  gamepad.h  geode.h  (+93 more)
lib/Debug/: secretFunc.lib
lib/Release/: secretFunc.lib
librerias/guipg/: CMakeLists.txt  guipg.cpp  guipg.vcxproj  icons.cpp  logConsole.cpp
librerias/guipg/include/: guipg.h  imGuIZMOquat.h  logConsole.h  vGizmoConfig.h  vGizmoMath.h
recursos/shaders/: constantshading.frag  constantshading.vert  constantshadinguniform.frag  constantshadinguniform.vert  showDepthStencil.frag  showDepthStencil.vert  showRectangleTexture.frag  showRectangleTexture.vert  vdc.frag  vdc.geom  vdc.vert
secretFunc/: CMakeLists.txt  main.cpp  secretFunc.vcxproj
vdclib/: CMakeLists.txt  vdclib.vcxproj
vdclib/include/: grid.h  rectilinearGrid.h  structuredGrid.h  topoQuadGrid.h  uniformGrid.h  unstructuredTriangleGrid.h
